# django-languages-plus

./: .python-version  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGES.txt  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
languages_plus/: __init__.py  admin.py  apps.py  models.py  utils.py
languages_plus/data/: culturecodes.csv.old  languages.csv
languages_plus/fixtures/: initial_data.json
languages_plus/migrations/: 0001_initial.py  0002_auto_20141008_0947.py  0003_auto_20150803_1140.py  0004_auto_20171214_0004.py  0005_language_name_sv.py
languages_plus/tests/: test_models.py  test_utils.py
tests/: settings.py  test_models.py  test_utils.py
